v1.7 prep: complete the Java 17 baseline migration
Builds on @jottinger's three commits cherry-picked above:

- 5b7d6d4f Updates module dependencies        (=#11 base)
- 2e32eb5d Updating benchmarks dependencies   (=#11 follow-up)
- af1f82af Updates code to conform to java 17 (=#12)

Follow-up gaps closed by this commit:

- examples/pom.xml — flip <maven.compiler.release> 21 → 17 (only
  the root and benchmarks POMs were flipped upstream).
- examples/.../WeeklyScheduleRenderer.java — rewrite the two
  switch-with-deconstruction blocks (DayShift / Half) plus the
  StatusFill instanceof-with-record-pattern check as Java
  17–compatible instanceof if-else chains. Records still expose
  status() / shift() / lunch() / dinner() so call sites are a
  one-line refactor each.
- benchmarks/.../BenchmarkMedianTool.java — 9× List.getFirst() →
  .get(0) (List.getFirst is JEP 431, Java 21).
- benchmarks/.../ComparativeBenchmark.java — Thread.threadId() →
  Thread.getId() (threadId is Java 19+).
- .github/workflows/ci.yml — actions/setup-java java-version
  '21' → '17' across all five jobs.
- README.md — Java-21 badge → Java-17+.
- CHANGELOG.md — new "## v1.7.0 — Planned" entry detailing the
  Java 17 baseline, dependency refresh, and Maven Central
  distribution plan; credits @jottinger upfront.

Local verification on this worktree:

- ./mvnw -B -ntp clean verify -pl . → 785 / 0 / 0 / 0
- ./mvnw -B -ntp -f examples/pom.xml clean compile → BUILD SUCCESS
- ./mvnw -B -ntp -f benchmarks/pom.xml clean compile → BUILD SUCCESS

Note: local Maven runs on Java 21 with -release 17, which catches
compile-time API drift but not runtime-only Java 21 hooks. The
draft PR's CI run on Temurin JDK 17 is the truth source for that.

Co-Authored-By: Joseph Ottinger <joeo@enigmastation.com>